alignment correction

--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
     height: 100vh;
 }
 .container {
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .half-width {
     height: 570px;
     background: #222436;
-    padding: 30px;
+    padding: 50px 20px;
     text-align: center;
+    margin: 20px 0;
+    border-radius: 10px;
 }
 .generate-btn{
     margin-top: 140px;
@@ -39,8 +41,9 @@ input[type='text']{
     width: 80%;
     margin: 0 auto;
     border: 2px solid #858299;
+    border-radius: 50px;
     height: 50px;
-    padding: 10px;
+    padding: 10px 20px;
 }
 input[type='text']:focus {
     background-color: #3D4153;
@@ -63,27 +66,28 @@ width: 100%;
 }
 
 .button {
-width: 20%;
+width: 15%;
 background: #425062;
 color: #fff;
-padding: 20px 0;
+padding: 15px 0;
 margin: 5px;
 display: inline-block;
 font-size: 25px;
 text-align: center;
 vertical-align: middle;
-margin-right: -4px;
-border-radius: 10px;
+border-radius: 50px;
 cursor: pointer;
 }
 .blink-me {
 color: #E0B612;
 }
 .submit-btn {
+    width: 60%;
+    font-weight: 700;
     border: none;
     margin-top: 20px;
-    padding: 10px 120px;
-    border-radius: 5px;
+    padding: 12px;
+    border-radius: 50px;
     background: #495BC3;
     color: #fff;
 }
@@ -92,13 +96,13 @@ color: #E0B612;
     text-align: center;
     margin: 0 auto;
     background: #222436;
-    margin-top: 20px;
-    border-radius: 15px;
-    padding: 5px 20px;
+    margin-top: 10px;
+    margin-bottom: 100px;
+    border-radius: 50px;
+    padding: 10px 20px;
     display: none;
 }
 .notify-section{
-    width: 35%;
     margin: 0 auto;
 }
 .action-left {
